# voxel-collision-checker-plugin

./: CMakeLists.txt  README.md
cmake/: FindOpenRAVE.cmake
examples/: misc_transform.py  pr2_simple_example.py  pr2_simple_example_2arm.py  puck_simple_example.py  rrt_example_pr2.py  rrt_example_stones.py  simple_example.py  simple_example.py~
models/: boxrobot.xml  stones.env.xml  virtual2dof.robot.xml
plugins/: README.txt
src/: collision_point.cpp  collision_point.hpp  cost_field.hpp  distance_field.hpp  dvxlcolcheck.cpp  dvxlcolcheck.hpp  init_obstacle_field.cpp  init_obstacle_field.hpp  libDVXL.h  propagation_distance_field.cpp  propagation_distance_field.hpp  stdafx.h  voxel_checker_main.cpp  voxel_checker_main.hpp  voxel_grid.hpp  voxelcolcheck.cpp  voxelcolcheck.hpp  voxelcolchecker_main.cpp
